<resources>
    <string name="Title">SetorKost</string>
    <string name="TitleContentDescription">This is logo of the title</string>
    <string name="HintUsername">Username / Email Address</string>
    <string name="HintPassword">Password</string>
    <string name="ButtonLogin">Log In</string>
    <string name="ButtonLoginGoogle">Log in melalui Google</string>
    <string name="AskAccount">Belum punya akun?</string>
    <string name="SignUp">Daftar Sekarang</string>
    <string name="ForgotPassword">Lupa Password?</string>
    <string name="Daftar">Daftar</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="PasswordBaru">Password Baru</string>
    <string name="UbahPassword">Ubah Password</string>
    <string name="MenuKamar">Menu Kamar</string>
    <string name="MenuPenghuni">Menu Penghuni</string>
    <string name="MenuSetoran">Menu Setoran</string>
    <string name="Kamar">Kamar</string>
    <string name="Penghuni">Penghuni</string>
    <string name="Setoran">Setoran</string>
    <string name="FilterRumah">Filter tipe rumah</string>
    <string name="FilterNomorKamar">Filter nomor kamar</string>
    <string name="FilterNamaPenghuniKamar">Filter nama penghuni/kamar</string>
    <string name="FilterTanggal">Filter tanggal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
