<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <View
        style="@style/BackgroundLogin" />

    <ImageView
        android:id="@+id/logo_house"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_title"
        app:layout_editor_absoluteY="58dp"
        android:contentDescription="@string/TitleContentDescription" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:fontFamily="@font/roboto_light"
        android:textColorHint="#929292"
        android:layout_marginTop="32dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:paddingBottom="20dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/Email"
        app:layout_constraintTop_toBottomOf="@+id/logo_house"
        app:layout_constraintLeft_toLeftOf="@+id/logo_house"
        app:layout_constraintRight_toRightOf="@+id/logo_house" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:fontFamily="@font/roboto_light"
        android:textColorHint="#929292"
        android:layout_marginTop="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:paddingBottom="20dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:drawableEnd="@drawable/ic_remove_red_eye_white_27dp"
        android:drawablePadding="10dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/PasswordBaru"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email"
        app:layout_constraintLeft_toLeftOf="@+id/edit_text_email"
        app:layout_constraintRight_toRightOf="@+id/edit_text_email" />

    <Button
        android:id="@+id/button_login_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_login_regular"
        android:text="@string/UbahPassword"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/roboto_medium"
        android:textSize="18sp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
        app:layout_constraintLeft_toLeftOf="@+id/edit_text_password"
        app:layout_constraintRight_toRightOf="@+id/edit_text_password" />

</android.support.constraint.ConstraintLayout>