<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="fragment_setoran"
    tools:context=".fragment.SetoranFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/accountant_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/accountant_image"
        android:adjustViewBounds="true" />

    <ImageView
        android:id="@+id/mask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/mask"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/title_menu_kamar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MenuSetoran"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:gravity="left"
        app:layout_constraintBottom_toBottomOf="@+id/mask"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="10dp" />

    <ImageView
        android:id="@+id/home_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home_black_24dp_invisible"
        android:adjustViewBounds="true"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="@+id/spinner_filter_tipe_rumah"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_filter_tipe_rumah"
        app:layout_constraintRight_toLeftOf="@+id/spinner_filter_tipe_rumah" />

    <Spinner
        android:id="@+id/spinner_filter_tipe_rumah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#000000"
        android:layout_marginTop="10dp"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        app:layout_constraintTop_toBottomOf="@+id/mask" />

    <ImageView
        android:id="@+id/calendar_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_date_range_black_24dp_invisible"
        android:adjustViewBounds="true"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="@+id/edit_text_filter_tanggal"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_filter_tanggal"
        app:layout_constraintRight_toLeftOf="@+id/edit_text_filter_tanggal" />

    <EditText
        android:id="@+id/edit_text_filter_tanggal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:fontFamily="@font/roboto_light"
        android:textColorHint="#929292"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#000000"
        android:textSize="18sp"
        android:hint="@string/FilterTanggal"
        app:layout_constraintTop_toBottomOf="@+id/spinner_filter_tipe_rumah"
        app:layout_constraintLeft_toLeftOf="@+id/spinner_filter_tipe_rumah"
        app:layout_constraintRight_toRightOf="@+id/spinner_filter_tipe_rumah" />

    <ImageView
        android:id="@+id/person_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_account_circle_black_24dp_invisble"
        android:adjustViewBounds="true"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="@+id/edit_text_filter_nama_penghuni_atau_nomor_kamar"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_filter_nama_penghuni_atau_nomor_kamar"
        app:layout_constraintRight_toLeftOf="@+id/edit_text_filter_nama_penghuni_atau_nomor_kamar" />

    <EditText
        android:id="@+id/edit_text_filter_nama_penghuni_atau_nomor_kamar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:fontFamily="@font/roboto_light"
        android:textColorHint="#929292"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#000000"
        android:textSize="18sp"
        android:hint="@string/FilterNamaPenghuniKamar"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_filter_tanggal"
        app:layout_constraintLeft_toLeftOf="@+id/edit_text_filter_tanggal"
        app:layout_constraintRight_toRightOf="@+id/edit_text_filter_tanggal" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_setoran"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_row_setoran"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_filter_nama_penghuni_atau_nomor_kamar"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>